# storpool-openstack-integration

./: .editorconfig  .gitignore  CHANGES.md  GNUmakefile  HACKING.md  README.md  mkdocs.yml  noxfile.py  pylintrc  pyproject.toml  setup.cfg  sp-image-to-volume  sp-image-to-volume.1  sp-openstack  sp-openstack.1  tox.ini
.reuse/: dep5
debian/: changelog  control  copyright  rules  storpool-openstack-integration.install  storpool-openstack-integration.manpages  watch
debian/patches/: 01-drivers.patch  02-python3.patch  03-python3-syntax.patch  series
debian/source/: lintian-overrides
debian/upstream/: metadata
defs/: components.json
docs/: changes.md  configure.md  hacking.md  index.md  kolla.md  patch_mode.md  storpool.md
drivers/: versions.json
drivers/cinder/debian/kilo/2015.1.0/: exception.py
drivers/cinder/juno/: storpool.py
drivers/cinder/kilo/: storpool.py
drivers/cinder/openstack/antelope/patches/: 01_971281_1_StorPool-cosmetic-comment-headings-instead-of-empty-lines.stripped.patch  02_971282_1_Remove-six-from-StorPool-driver.patch  03_971283_1_StorPool-drop-_attach_volume-and-_detach_volume.patch  03_971283_1_StorPool-drop-_attach_volume-and-_detach_volume.stripped.patch  04_971284_1_StorPool-driver-remove-the-obsolete-backup_volume.patch  05_971285_1_StorPool-drop-copy_image_to_volume-and-copy_volume_to_image.stripped.patch  06_971286_1_StorPool-fix-the-rename-volume-unit-test-emulation.stripped.patch  07_971287_1_StorPool-fix-the-retype-volume-flow.patch  07_971287_1_StorPool-fix-the-retype-volume-flow.stripped.patch  08_971288_1_Implement-revert_to_snapshot-for-StorPool.patch  08_971288_1_Implement-revert_to_snapshot-for-StorPool.stripped.patch  09_971289_1_StorPool-create_cloned_volume-improvements.patch  09_971289_1_StorPool-create_cloned_volume-improvements.stripped.patch  10_971290_1_Add-the-clone_across_pools-driver-capability.patch  10_971290_1_Add-the-clone_across_pools-driver-capability.stripped.patch  11_971291_1_StorPool-declare-the-clone_across_pools-capability.patch  11_971291_1_StorPool-declare-the-clone_across_pools-capability.stripped.patch  12_971292_1_StorPool-Fix-typo.stripped.patch  13_971293_1_StorPool-DRY-volumeCreate-in-create_volume.patch  14_971294_1_test_storpool.py-Assume-volumes-have-a-volume-type.stripped.patch  15_971295_1_StorPool-Use-os-brick-instead-of-packages-storpool-and-storpool.spopenstack.patch  15_971295_1_StorPool-Use-os-brick-instead-of-packages-storpool-and-storpool.spopenstack.stripped.patch  16_971296_1_Add-iSCSI-export-support-to-the-StorPool-driver.patch  16_971296_1_Add-iSCSI-export-support-to-the-StorPool-driver.stripped.patch  17_971297_1_StorPool-Propagate-a-storpool-qos_class-extra-spec-to-the-StorPool-API.patch  17_971297_1_StorPool-Propagate-a-storpool-qos_class-extra-spec-to-the-StorPool-API.stripped.patch  17_983033_1_StorPool-Do-not-use-the-option-storpool_replication-when-creating-or-retyping-volumes.patch  18_983034_1_StorPool-Use-only-baseOn-when-cloning-a-volume.stripped.patch  19_983071_1_StorPool-Use-template-to-set-tag-qc-instead-of-template.stripped.patch
drivers/cinder/openstack/caracal/: storpool.py
drivers/cinder/openstack/caracal/patches/: 01_953958_3_StorPool-drop-_attach_volume-and-_detach_volume.patch  01_953958_3_StorPool-drop-_attach_volume-and-_detach_volume.stripped.patch  01_973752_1_StorPool-drop-_attach_volume-and-_detach_volume.patch  01_973752_1_StorPool-drop-_attach_volume-and-_detach_volume.stripped.patch  02_954081_1_StorPool-driver-remove-the-obsolete-backup_volume.patch  02_973754_1_StorPool-driver-remove-the-obsolete-backup_volume.patch  03_954082_1_StorPool-drop-copy_image_to_volume-and-copy_volume_to_image.stripped.patch  03_973755_1_StorPool-drop-copy_image_to_volume-and-copy_volume_to_image.stripped.patch  (+45 more)
drivers/cinder/openstack/juno/: exception.py
drivers/cinder/openstack/kilo/: exception.py
drivers/cinder/openstack/liberty/: exception.py
drivers/cinder/openstack/mitaka/: exception.py
drivers/cinder/openstack/ocata/: exception.py
drivers/cinder/openstack/pike/: exception.py
drivers/cinder/openstack/victoria/: storpool.py
drivers/cinder/openstack/wallaby/: storpool.py
drivers/cinder/openstack/xena/: storpool.py
drivers/cinder/openstack/yoga/: cache.py  create_volume.py  manager.py  storpool.py
drivers/cinder/openstack/zed/: create_volume.py  manager.py  storpool.py  test_create_volume_flow.py  test_storpool.py  volume_driver.py
drivers/nova/debian/juno/: latest
drivers/nova/debian/kilo/: latest
drivers/nova/openstack/bobcat/: config.py  driver.py  libvirt.py  test_config.py
drivers/nova/openstack/caracal/: config.py  driver.py  libvirt.py  libvirt_data.py  test_config.py  volume.py
drivers/nova/openstack/juno/: latest
drivers/nova/openstack/xena/: config.py  driver.py  storpool.py
drivers/nova/openstack/yoga/: config.py  driver.py  libvirt.py  libvirt_data.py  storpool.py  test_config.py
drivers/nova/openstack/zed/: config.py  driver.py  libvirt.py  storpool.py  test_config.py  volume.py
drivers/nova/rdo/juno-epel-7/: latest
drivers/os_brick/openstack/bobcat/: storpool.py
drivers/os_brick/openstack/victoria/: storpool.py
drivers/os_brick/openstack/xena/: storpool.py
drivers/os_brick/openstack/yoga/: storpool.py
drivers/os_brick/openstack/zed/: storpool.py
kolla/docker/: Dockerfile.j2  Dockerfile2.j2
py-contrib/sp_variant/: __init__.py  __main__.py  defs.py  variant.py  vbuild.py  yaiparser.py
python/: chroot_test.py  requirements.txt
python/chroot_test/: __init__.py  __main__.py
python/kolla_rebuild/: __init__.py  __main__.py  defs.py  find.py  prepare.py
python/requirements/: black.txt  docs.txt  flake8.txt  install.txt  isort.txt  mypy.txt  pylint.txt  run-chroot-test.txt  run-kolla-rebuild.txt  test.txt
python/sp_osi/: __init__.py  __main__.py  defs.py  detect.py  divert.py  groups.py  install.py  parse.py  patch.py  u8loc.py  util.py
python/unit_tests/: __init__.py  test_parse.py  test_u8loc.py
tools/: add-storpool-nova-driver  detect-driver.pl  install-mimic.pl  update-driver.pl
(+67 files in other folders)
